moving some files and updating requirements

--- a/notebooks/DEMO.ipynb
+++ b/notebooks/DEMO.ipynb
@@ -26,23 +26,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b02aaf7b-11b5-4512-8a3b-5c26d8235b3a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:30.677082Z",
-     "iopub.status.busy": "2024-01-10T21:41:30.676404Z",
-     "iopub.status.idle": "2024-01-10T21:41:31.321496Z",
-     "shell.execute_reply": "2024-01-10T21:41:31.320782Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): jar/moa.jar\n",
+      "capymoa_root: /Users/gomeshe/Dropbox/ciencia_computacao/dev/CapyMOA_PullRequests/CapyMOA/src/capymoa\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/CapyMOA_PullRequests/CapyMOA/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
-      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
+      "JAVA_HOME: /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
@@ -58,14 +51,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "79a66284-4998-4423-bdde-d5229b56061d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:31.324811Z",
-     "iopub.status.busy": "2024-01-10T21:41:31.324591Z",
-     "iopub.status.idle": "2024-01-10T21:41:33.487280Z",
-     "shell.execute_reply": "2024-01-10T21:41:33.486802Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -106,14 +92,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "9a382df9-5790-4414-a088-9ebfe50a6446",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:33.489103Z",
-     "iopub.status.busy": "2024-01-10T21:41:33.488925Z",
-     "iopub.status.idle": "2024-01-10T21:41:35.096806Z",
-     "shell.execute_reply": "2024-01-10T21:41:35.096385Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -304,23 +283,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "63a4f3fc-bc48-4849-9040-682672a2a46e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:35.098591Z",
-     "iopub.status.busy": "2024-01-10T21:41:35.098411Z",
-     "iopub.status.idle": "2024-01-10T21:41:35.101312Z",
-     "shell.execute_reply": "2024-01-10T21:41:35.101003Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'learner': 'OnlineBagging',\n",
-       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x7f368440d340>,\n",
-       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x7f3684412550>,\n",
-       " 'wallclock': 1.5939953327178955,\n",
-       " 'cpu_time': 1.9296059999999997}"
+       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x103700c40>,\n",
+       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x1037278e0>,\n",
+       " 'wallclock': 1.5741758346557617,\n",
+       " 'cpu_time': 1.8367210000000007}"
       ]
      },
      "execution_count": 4,
@@ -337,14 +309,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "c6c1e7f8-2e6a-4ad9-9ace-ce73ff6224d2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:35.102888Z",
-     "iopub.status.busy": "2024-01-10T21:41:35.102765Z",
-     "iopub.status.idle": "2024-01-10T21:41:36.676483Z",
-     "shell.execute_reply": "2024-01-10T21:41:36.676132Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -541,12 +506,6 @@
    "execution_count": 6,
    "id": "b170a6fc-d7be-455e-91f5-183255643807",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:36.678199Z",
-     "iopub.status.busy": "2024-01-10T21:41:36.678067Z",
-     "iopub.status.idle": "2024-01-10T21:41:36.680673Z",
-     "shell.execute_reply": "2024-01-10T21:41:36.680227Z"
-    },
     "scrolled": true
    },
    "outputs": [
@@ -595,14 +554,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "ac835936-fc44-4f7b-acae-fe629b8a4ec6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:36.682363Z",
-     "iopub.status.busy": "2024-01-10T21:41:36.682231Z",
-     "iopub.status.idle": "2024-01-10T21:41:37.162495Z",
-     "shell.execute_reply": "2024-01-10T21:41:37.161813Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -626,14 +578,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "61e684d8-2992-4ca9-bada-4660ff5fd9b4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:37.164559Z",
-     "iopub.status.busy": "2024-01-10T21:41:37.164363Z",
-     "iopub.status.idle": "2024-01-10T21:41:50.445999Z",
-     "shell.execute_reply": "2024-01-10T21:41:50.445390Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from moa.classifiers.meta import StreamingRandomPatches\n",
@@ -649,14 +594,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "b2cca100-0a41-4abd-a700-f4c640871be7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:50.447937Z",
-     "iopub.status.busy": "2024-01-10T21:41:50.447806Z",
-     "iopub.status.idle": "2024-01-10T21:41:50.450377Z",
-     "shell.execute_reply": "2024-01-10T21:41:50.450049Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -696,14 +634,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "1d23ca82-4967-4a99-90c8-34841cf58f66",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:50.451931Z",
-     "iopub.status.busy": "2024-01-10T21:41:50.451806Z",
-     "iopub.status.idle": "2024-01-10T21:41:50.672790Z",
-     "shell.execute_reply": "2024-01-10T21:41:50.672229Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -733,14 +664,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "56ed36b6-fd9a-49b6-965e-2ff964423948",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:50.674660Z",
-     "iopub.status.busy": "2024-01-10T21:41:50.674524Z",
-     "iopub.status.idle": "2024-01-10T21:41:57.447390Z",
-     "shell.execute_reply": "2024-01-10T21:41:57.446940Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1359,14 +1283,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "700d864e-f2d4-4e56-9e0d-d39c5f05e936",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:57.449208Z",
-     "iopub.status.busy": "2024-01-10T21:41:57.449065Z",
-     "iopub.status.idle": "2024-01-10T21:41:57.710125Z",
-     "shell.execute_reply": "2024-01-10T21:41:57.709704Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1396,14 +1313,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "f7b59e4a-7651-4cff-82c0-bb587917e234",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:41:57.711934Z",
-     "iopub.status.busy": "2024-01-10T21:41:57.711801Z",
-     "iopub.status.idle": "2024-01-10T21:42:01.094272Z",
-     "shell.execute_reply": "2024-01-10T21:42:01.093775Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1447,14 +1357,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "5f3964f3-74bd-499b-b470-732b7d29c05c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:42:01.096321Z",
-     "iopub.status.busy": "2024-01-10T21:42:01.096129Z",
-     "iopub.status.idle": "2024-01-10T21:42:01.615272Z",
-     "shell.execute_reply": "2024-01-10T21:42:01.614844Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1497,14 +1400,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "b66d1529-6a11-4e6a-9da2-85833eccac4b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T21:42:01.617095Z",
-     "iopub.status.busy": "2024-01-10T21:42:01.616954Z",
-     "iopub.status.idle": "2024-01-10T21:42:01.626266Z",
-     "shell.execute_reply": "2024-01-10T21:42:01.625812Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
